rails search with open api done

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,20 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+
+// #mymovies {
+//   display: flex;
+//   h5 {
+//     color: red;
+// }
+// }
+
+// #movie-cards {
+//   display: flex;
+// }
+
+h1 {
+  text-align: center;
+  margin-bottom: 2rem;
+  margin-top: 40px;
+}
