--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
       <%= text_field_tag :query,
             params[:query],
             class: "form-control",
-            placeholder: "Type a Movie name"
+            placeholder: "Type a keyword e.g. 'Harry Potter'"
         %>
       <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
     <% end %>
@@ -20,16 +20,18 @@
           <% @movies.each do |movie| %>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12" id="mymovies">
           <div class="card mb-2">
-            <img src="<%=movie.poster_url%>" class="card-img-top" alt="">
+            <img src="<%=movie['Poster']%>" class="card-img-top" alt="">
             <div class="card-body">
-              <span class="badge bg-primary mb-2"><%= movie.year %></span>
-              <h5 class="card-title"><%= movie.title %></h5>
+              <span class="badge bg-primary mb-2"><%= movie['Year'] %></span>
+              <h5 class="card-title"><%= movie['Title'] %></h5>
             </div>
           </div>
           </div>
             <% end %>
+        <% elsif params[:query].present? && @data['Response'] == 'False' %>
+        <em>Sorry, no movies found.</em>
         <% else %>
-          <em>Sorry, no movies found.</em>
+          <em>Search a movie.</em>
         <% end %>
       </div>
   </div>
