pages feature added

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,20 @@
 em {
   text-align: center;
 }
+
+.page-link {
+  width: 10rem;
+  height: 4rem;
+  margin-bottom: 2rem;
+}
+
+.icon-margin-right {
+  margin-left: 1rem; /* adjust as needed */
+  // width: 40px;
+}
+
+.icon-margin-left {
+  margin-right: 1rem; /* adjust as needed */
+  // width: 40px;
+}
+
