--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,7 +36,7 @@
           </div>
           <% end %>
             <% if @data['totalResults'].to_i > 10 %>
-              <div class="col-6 d-flex flex-column align-items-center justify-content-center">
+              <div class="col-12 col-sm-6 d-flex flex-column align-items-center justify-content-center">
                 <nav aria-label="Page navigation example">
                   <ul class="pagination">
                     <li class="page-item <% 'disabled' if @page.to_i <= 1 %>">
