--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,6 +2,11 @@
 em {
   text-align: center;
 }
+#quote {
+  text-align: center;
+  font-size: smaller;
+  opacity: 0.6;
+}
 
 .page-link {
   width: 10rem;
@@ -18,4 +23,3 @@ em {
   margin-right: 1rem; /* adjust as needed */
   // width: 40px;
 }
-
