--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,7 +5,7 @@ em {
 #quote {
   text-align: center;
   font-size: smaller;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 
 .page-link {
@@ -22,4 +22,8 @@ em {
 .icon-margin-left {
   margin-right: 1rem; /* adjust as needed */
   // width: 40px;
+}
+
+.custom-placeholder::placeholder {
+  opacity: 0.5; /* adjust as needed */
 }
